# tailscale_mobile

./: .gitignore  CLAUDE.md  README.md  build.gradle.kts  jitpack.yml  settings.gradle.kts
.github/workflows/: jitpack-trigger.yml
android/: settings.gradle.kts
android/lib/: build.gradle.kts
android/lib/src/main/: AndroidManifest.xml
android/lib/src/main/cpp/: CMakeLists.txt  libtailscale.h  tailscale_jni.cpp
android/lib/src/main/java/com/tailscale/mobile/: TailscaleConfig.kt  TailscaleJni.kt  TailscaleProxyService.kt
android/sample/: build.gradle.kts
android/sample/src/main/: AndroidManifest.xml
android/sample/src/main/java/com/tailscale/mobile/sample/: MainActivity.kt  StreamService.kt
android/sample/src/main/res/layout/: activity_main.xml
android/sample/src/main/res/values/: strings.xml
libtailscale/: android_init.go  tailscale.go
